Completed 3 HTML tasks

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Excercise 1 -->
+<!-- Exercise 1 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -54,7 +54,7 @@
 
 
 <!-- ########################################################### -->
-<!-- Excercise 2 -->
+<!-- Exercise 2 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -96,7 +96,7 @@
 </html>
 
 <!-- ########################################################### -->
-<!-- Excercise 3 -->
+<!-- Exercise 3 -->
 
 <!DOCTYPE html>
 <html lang="en">
